k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: reimagined-disco
  labels:
    app: reimagined-disco
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reimagined-disco
      component: api
  template:
    metadata:
      labels:
        app: reimagined-disco
        component: api
    spec:
      containers:
        - name: api
          image: pirraste/reimagined-disco-api:v0
          ports:
            - containerPort: 3000 # containerPort must match where the container listen to !
          volumeMounts:
            - name: smb
              mountPath: /data/music
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: 
                - ALL
            seccompProfile:
              type: RuntimeDefault # "RuntimeDefault" or "Localhost"
      volumes:
        - name: smb
          persistentVolumeClaim:
            claimName: pvc-nas-music-ro
            readOnly: true
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
