k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: reimagined-disco
  labels:
    app: reimagined-disco
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reimagined-disco
      component: ui
  template:
    metadata:
      labels:
        app: reimagined-disco
        component: ui
    spec:
      containers:
      - name: ui
        image: pirraste/reimagined-disco-ui:v0.2.8
        ports:
          - containerPort: 8080 # must match where the container listen to ! nginx-unprivileged listens on 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault # "RuntimeDefault" or "Localhost"
