k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: reimagined-disco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: 'postgres:14'
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault # "RuntimeDefault" or "Localhost"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
            #- name: pgconfigfile
            #  mountPath: /app/config.yaml
            #  subPath: config.yaml
      volumes:
        # data
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
        # configmap
        #- name: pgconfigfile
        #  configMap:
        #    name: pgconfig
      #volumes:
      #  - name: postgresdata
      #    hostPath:
      #      path: /var/mnt/hdd-data-1
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: reimagined-disco
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
