k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: reimagined-disco
spec:
  selector:
    app: reimagined-disco
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # must match the containerPort of the Pod
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: reimagined-disco
spec:
  selector:
    app: reimagined-disco
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 # must match the containerPort of the Pod
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: reimagined-disco
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body.size: 20M
spec:
  ingressClassName: nginx
  # tls: 
  #   - hosts:
  #     - web-test.homelab.net
  #    secretName: web-test.homelab.net
  rules:
    - host: music.saba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
    #- host: music-api.saba.net
    #  http:
    #    paths:
    #      - path: /
    #        pathType: Prefix
    #        backend:
    #          service:
    #            name: api-svc
    #            port:
    #              number: 80
